--- a/php/styles/style.css
+++ b/php/styles/style.css
@@ -153,7 +153,7 @@ body {
 }
 
 .containergrey {
-  background-color: rgb(150, 150, 150);
+  background-color: rgb(190, 190, 190);
   border-radius: 4px;
   padding: 10px;
 }
